create-license/main/default/objects/Replicated_Instance__c/Replicated_Instance__c.object-meta.xml
<CustomObject>
    <label>Replicated Instance</label>
    <nameField>
        <label>Instance Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Replicated Instances</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>