create-license/main/default/objects/Replicated_Instance__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <description>Parent Account for this Replicated instance</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Replicated Instances</relationshipLabel>
    <relationshipName>Replicated_Instances</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>