create-license/main/default/objects/Replicated_Instance__c/fields/App_Version__c.field-meta.xml
<CustomField>
    <fullName>App_Version__c</fullName>
    <description>Running application version</description>
    <label>App Version</label>
    <length>255</length>
    <type>Text</type>
</CustomField>