create-license/main/default/objects/Replicated_Instance__c/fields/Cloud_Provider__c.field-meta.xml
<CustomField>
    <fullName>Cloud_Provider__c</fullName>
    <description>Cloud provider (AWS, GCP, Azure, etc.)</description>
    <label>Cloud Provider</label>
    <length>255</length>
    <type>Text</type>
</CustomField>