create-license/main/default/objects/Replicated_Instance__c/fields/Daily_Active_Users__c.field-meta.xml
<CustomField>
    <fullName>Daily_Active_Users__c</fullName>
    <description>Slackernews custom metric for daily active users</description>
    <label>Daily Active Users</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>