create-license/main/default/objects/Replicated_Instance__c/fields/First_Check_In__c.field-meta.xml
<CustomField>
    <fullName>First_Check_In__c</fullName>
    <description>First instance check-in — measures time-to-install</description>
    <label>First Check-In</label>
    <type>DateTime</type>
</CustomField>