create-license/main/default/objects/Replicated_Instance__c/fields/Instance_Id__c.field-meta.xml
<CustomField>
    <fullName>Instance_Id__c</fullName>
    <description>Replicated instance ID — reconciliation key</description>
    <externalId>true</externalId>
    <label>Instance Id</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>