create-license/main/default/objects/Replicated_Instance__c/fields/K8s_Distribution__c.field-meta.xml
<CustomField>
    <fullName>K8s_Distribution__c</fullName>
    <description>Kubernetes distribution</description>
    <label>Kubernetes Distribution</label>
    <length>255</length>
    <type>Text</type>
</CustomField>