create-license/main/default/objects/Replicated_Instance__c/fields/Last_Check_In__c.field-meta.xml
<CustomField>
    <fullName>Last_Check_In__c</fullName>
    <description>Last instance check-in — measures engagement recency</description>
    <label>Last Check-In</label>
    <type>DateTime</type>
</CustomField>