create-license/main/default/objects/Replicated_Instance__c/fields/Monthly_Active_Users__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Active_Users__c</fullName>
    <description>Slackernews custom metric for monthly active users</description>
    <label>Monthly Active Users</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>