create-license/main/default/objects/Replicated_Instance__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Current instance status</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Ready</fullName><default>false</default><label>Ready</label></value>
            <value><fullName>Updating</fullName><default>false</default><label>Updating</label></value>
            <value><fullName>Degraded</fullName><default>false</default><label>Degraded</label></value>
            <value><fullName>Unavailable</fullName><default>false</default><label>Unavailable</label></value>
            <value><fullName>Missing</fullName><default>false</default><label>Missing</label></value>
            <value><fullName>Unknown</fullName><default>true</default><label>Unknown</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>